[project]
name = "revohsup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Felix Jung", email = "felix.jung@tu-dresden.de" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
revohsup = "revohsup:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
