[project]
name = "revohsup"
version = "0.0.1.post6"
description = "Yet another Python Pushover client"
readme = "README.md"
authors = [
    { name = "Felix Jung", email = "jung@posteo.de" }
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "typer>=0.23.0",
]

[project.scripts]
revohsup = "revohsup.cli:app"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "furo>=2025.12.19",
    "pytest>=9.0.2",
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
]
