[project]
name = "revohsup"
dynamic = ["version"]
license = "MIT"
description = "Yet another Python Pushover client"
readme = "README.md"
authors = [
    { name = "Felix Jung", email = "jung@posteo.de" }
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "typer>=0.23.0",
]

[project.scripts]
revohsup = "revohsup.cli:app"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
#zip-safe = false
include-package-data = false
py-modules = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
tag_regex = "^v(?P<version>.*)$"
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"  # or "dirty-tag" for local dev

[dependency-groups]
dev = [
    "furo>=2025.12.19",
    "pytest>=9.0.2",
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
]
